# ferrium

./: .dockerignore  .gitignore  CHANGELOG.md  CONFIG.md  Cargo.toml  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  README.md  build.rs  deny.toml  ferrite-default.toml  ferrium-default.toml  test-cluster.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  integration.yml  release.yml  security.yml
docs/: github-workflows-tls-integration.md  real-cluster-integration-testing.md
docs/assets/: README.md  logo-showcase.html
examples/: tls-cluster-demo.md
examples/configs/: cluster-node1.toml  high-performance.toml  single-node.toml  tls-example.toml
proto/: kv.proto  management.proto  raft.proto
scripts/: test-cluster.sh  validate-tls-workflows.sh
src/: lib.rs  tls.rs
src/client/: mod.rs  test.rs
src/config/: mod.rs  test.rs
src/grpc/: ferrite.kv.rs  ferrite.management.rs  ferrite.raft.rs  ferrium.kv.rs  ferrium.management.rs  ferrium.raft.rs  mod.rs
src/grpc/services/: kv_service.rs  management_service.rs  mod.rs  raft_service.rs
src/network/: mod.rs  test.rs
src/storage/: mod.rs  test.rs
tests/: configurable_tls_tests.rs  integration_test.rs  real_cluster_integration_test.rs  tls_auto_join_integration_test.rs  tls_cluster_tests.rs  tls_integration_tests.rs
