[package]
name = "ferrite"
version = "0.1.0"
edition = "2021"
description = "A distributed KV storage system built with openraft"
license = "Apache-2.0"

[[bin]]
name = "ferrite-server"
path = "src/bin/main.rs"

[[bin]]
name = "grpc-test"
path = "src/bin/grpc_test.rs"

[[bin]]
name = "grpc-client-test"
path = "src/bin/grpc_client_test.rs"

[build-dependencies]
tonic-build = "0.13"

[dependencies]
openraft = { version = "0.9", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
actix-cors = "0.6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rocksdb = "0.21"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono", "json"] }
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
byteorder = "1.4"

# gRPC dependencies
tonic = "0.13"
prost = "0.13"
tokio-stream = "0.1"
tower = "0.5"

# Configuration
toml = "0.8"
serde_with = "3.0"
dirs = "6.0"

[dev-dependencies]
tempfile = "3.0"
