[package]
name = "ferrium"
version = "0.1.0-beta1"
edition = "2021"
description = "A distributed KV storage system built with openraft"
license = "Apache-2.0"

[[bin]]
name = "ferrium-server"
path = "src/bin/main.rs"

[[bin]]
name = "grpc-test"
path = "src/bin/grpc_test.rs"

[[bin]]
name = "grpc-client-test"
path = "src/bin/grpc_client_test.rs"

[build-dependencies]
tonic-build = "0.13"
protoc-prebuilt = "0.3"

[dependencies]
openraft = { version = "0.9", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = { version = "4.0", features = ["rustls-0_23"] }
actix-cors = "0.7"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"], default-features = false }
rustls = { version = "0.23.29", features = ["ring"] }
rustls-pemfile = "2.1"
rustls-native-certs = "0.8"
base64 = "0.22"
rocksdb = "0.23"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "chrono", "json"] }
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
byteorder = "1.4"

# gRPC dependencies
tonic = { version = "0.14", features = ["tls-native-roots"] }
prost = "0.13"
tokio-stream = "0.1"
tower = "0.5"

# Configuration
toml = "0.9"
serde_with = "3.0"
dirs = "6.0"

# Optional test certificate generation
rcgen = { version = "0.13", optional = true }
time = { version = "0.3", optional = true }

[features]
test-certs = ["rcgen", "time"]

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"
